# SysMonitoring

./: Cargo.toml  Dioxus.toml
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
